<resources>
    <string name="app_name">Restaurant Reservation</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_tab">Map</string>
    <string name="list_tab">List</string>
    <string name="email">e-mail:</string>
    <string name="table">Table:</string>
    <string name="book">Reserve</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="reservations">Reservations</string>
    <string name="enter_query">Search for name, cuisine, dish…</string>
    <string name="opened_now">opened now</string>
    <string name="currently_closed">currently closed</string>
    <string name="reserve_in">Reserve table in</string>
    <string name="date">Date:</string>
    <string name="table_info_template">%d - %d person(s)</string>
    <string name="loading_restaurant">loading data…</string>
    <string name="delete_reservation_title">Do you want to cancel your reservation?</string>
    <string name="delete_reservation_yes">Yes</string>
    <string name="no_reservations">You have no reservations</string>
    <string name="delete_reservation_no">No</string>
</resources>
